--- a/projecto-final/css/index.css
+++ b/projecto-final/css/index.css
@@ -4,29 +4,128 @@
     box-sizing: border-box;
 }
 
-ul, nav {
+a {
+    text-decoration: none
+}
+
+nav, ul {
     list-style: none;
 }
 
-.nav-bar {
-    border: 1px solid black;   
+/* Navegação */ 
+
+.nav-bar {  
+    position: absolute;
+    top: 0;
+    left: 0; 
     width: 100%;
+    min-height: 5rem;
     display: flex;
-    justify-content: space-between; 
-    flex-direction: row;
-    padding: 2rem 2rem;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 2.2rem;
+    background-color: #fff;
+    z-index: 200;
 }
 
-.link-logo {
-    border: 1px solid black;
+.nav-bar 
+.logo { 
+    padding: 0.5rem;
+    display: flex;
+    align-items: center; 
 }
 
-ul {
-    height: 100%;
-    display: flex; 
+.nav-bar 
+.logo img {
+    margin-right: 0.6rem;
+}
+
+.nav-bar 
+.logo 
+.logo-label {
+    font-size: 1.8rem;
+}
+
+.nav 
+.nav-ul {
+    display: flex;
+}
+
+.nav 
+.nav-ul 
+.nav-itens {
+    margin-right: 1rem;
+}
+
+.nav 
+.nav-ul 
+.nav-itens:last-child {
+    margin-right: 0;
+}
+
+.nav 
+.nav-ul 
+.nav-itens 
+a {
+    font-size: 1.2rem;
+}
+
+/* Banner */ 
+
+.banner { 
+    width: 100%;
+    height: 100vh; 
+    background-image: url('../images/banner.jpg');
+    background-position: top left;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
+    text-align: center; 
 }
 
-li {
-    margin: 5px;
+.banner .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%; 
+}
+
+.banner h1, 
+.banner h4 {
+    color: #fff;
+    margin-bottom: 1.5rem;
+    z-index: 100;
+}
+
+.banner h1 {
+    font-size: 3rem;
+}
+
+.banner h4 {
+    font-size: 1.5rem;
+    text-transform: uppercase;
+}
+
+.banner .banner-btn { 
+    padding: 1rem 3rem;
+    border-radius: .25rem;
+    background-color: #0066FF;
+    color: #fff;
+    font-size: 1.1rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    z-index: 100;
+}
+
+/* Responsividade */
+
+@media (max-width: 585px) {
+    .nav-bar {
+        flex-direction: column;
+    }
 }
